fix file name overflow

--- a/static/codemirror/theme/twilight.css
+++ b/static/codemirror/theme/twilight.css
@@ -1,5 +1,5 @@
 .cm-s-twilight.CodeMirror { background: #141414; color: #757575; } /**/
-ZZ.cm-s-twilight div.CodeMirror-selected { background: #BDBDBD; } /**/
+.cm-s-twilight div.CodeMirror-selected { background: #BDBDBD; } /**/
 .cm-s-twilight .CodeMirror-line::selection, .cm-s-twilight .CodeMirror-line > span::selection, .cm-s-twilight .CodeMirror-line > span > span::selection { background: rgba(50, 50, 50, 0.50); }
 .cm-s-twilight .CodeMirror-line::-moz-selection, .cm-s-twilight .CodeMirror-line > span::-moz-selection, .cm-s-twilight .CodeMirror-line > span > span::-moz-selection { background: rgba(50, 50, 50, 0.50); }
 
